<?xml version="1.0" encoding="utf-8"?>
<resources>

<<<<<<< HEAD
    <string name="app_name">AOCI-PJ-OSD</string>
=======
    <string name="app_name">OSD-5</string>
>>>>>>> 53028ddafc1ec2666f7d107ded5d52657e6db877
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="frg1_PicAdj">Picture Adjust</string>
    
    	<string name="PA_PicMode">Picture Mode</string>
    	<string name="PA_Contrast">Contrast</string>
    	<string name="PA_Brightness">Brightness</string>
    	<string name="PA_Color">Color</string>
    	<string name="PA_Tint">Tint</string>
    	<string name="PA_ColorTemp">Color Temp.</string>
    	<string name="PA_Gamma">Gamma</string>
    	<string name="PA_Advanced">Advanced</string>
    	<string name="PA_LensApeture">Lens Apeture</string>
    
    
    <string name="frg2_IntSig">Input Signal</string>
   		<string name="IS_InputLevel">Input Level</string>
   		<string name="IS_ColorSpace">Color Space</string>
   		<string name="IS_Hide">Hide</string>
   		<string name="IS_Mask">Mask</string>
   		<string name="IS_PicturePosition">Picture Position</string>

   		
    <string name="frg3_Install">Installation</string>
    	<string name="IT_LensControl">Lens Control</string>
    	<string name="IT_PixelAdjust">Pixel Adjust</string>
    	<string name="IT_InstallationStyle">Installation Style</string>
    	<string name="IT_HighAltitudeMode">High Altitude Mode</string>

    		
    <string name="frg4_DispSet">Display Setup</string>
    	<string name="DS_BackColor">Back Color</string>
    	<string name="DS_MenuPosition">Menu Position</string>
    	<string name="DS_SignalDisplay">Signal Display</string>
    	<string name="DS_Logo">Logo</string>

    	
	<string name="frg5_Func">Function</string>
		<string name="FN_OffTimer">Off Timer</string>
		<string name="FN_Network">Network</string>
		<string name="FN_RemoteCode">Remote Code</string>
		<string name="FN_LampReset">Lamp Reset</string>
		

	<string name="frg6_Info">Information</string>
		<string name="IF_Input">Input</string>
		<string name="IF_Source">Source</string>
		<string name="IF_DeepColor">Deep Color</string>
		<string name="IF_LampTime">Lamp Time</string>
		<string name="IF_SoftVer">Soft Ver.</string>
		<string name="IF_PSVer">PS Ver.</string>
		<string name="IF_UnitID">Unit ID</string>
	
	
	<!-- Button -->
	<string name="str_butConnect">Connect</string>
	<string name="str_butDisconnect">Disconnect</string>
	
	<!-- Project IP & Port -->
	<string name="SERVERIP">192.168.1.3</string>
	<string name="SERVERPORT">20554</string>
	<string name="SERVERTIMEOUT">20</string>

</resources>
