<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_dispset"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="#000000" >

    <TextView
        android:id="@+id/txtBackColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="15dp"
        android:layout_centerInParent="true" 
        android:text="@string/DS_BackColor"
        android:textColor="#FFFFFF" />
    
    <TextView
        android:id="@+id/txtMenuPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/txtBackColor"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="12dp"
        android:layout_centerInParent="true" 
		android:text="@string/DS_MenuPosition"
		android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/txtSignalDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/txtMenuPosition"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="12dp"
        android:layout_centerInParent="true" 
		android:text="@string/DS_SignalDisplay"
		android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/txtLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/txtSignalDisplay"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="12dp"
        android:layout_centerInParent="true" 
		android:text="@string/DS_Logo"
		android:textColor="#FFFFFF" />
    
</RelativeLayout>
